--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "prospect-path",
+  "name": "react-18-redux-example-01",
   "version": "0.1.0",
   "private": true,
   "dependencies": {
